--- a/test.html
+++ b/test.html
@@ -10,11 +10,15 @@
     </header>
 
     <main>
-      <h1>Dies wird irgendwann einen Todo App sein</h1>
+      <h1>Dies wird irgendwann eine Todo App sein</h1>
+      <h2>Test nummer 2</h2>
+      <input type="checkbox" name="check1" id="1"><label for="check1">Todo nr1</label>
+      <input type="checkbox" name="check2" id="2"><label for="check1">Todo nr2</label>
+      <input type="checkbox" name="check3" id="3"><label for="check1">Todo nr3</label>
     </main>
 
     <footer>
-      <p>&copy; MyName</p>
+      <p>&copy; LG</p>
     </footer>
   </body>
 </html>
