added dark theme button from lecture

--- a/test.html
+++ b/test.html
@@ -8,6 +8,8 @@
 <body>
   <h1>Dies wird irgendwann eine Todo App sein</h1>
   <h2>Test nummer 2</h2>
+  
+  <button type="button" id="theme-button">Toggle Darktheme</button>
   <ul id="todos"></ul>
   <input id="newTask" type="text" placeholder="Enter new task">
   <input id="newNote" type="text" placeholder="Enter note">
