added description and due date

--- a/notes_detail.html
+++ b/notes_detail.html
@@ -20,8 +20,12 @@
         <div class="container11">
             <div>
                 <form id="noteForm">
-                    <label for="note">Notiz:</label><br>
+                    <label for="note">Notiz Titel:</label><br>
                     <input type="text" id="note" name="note"><br>
+                    <label for="note_description">Beschreibung:</label><br>
+                    <input type="text" id="note_description" name="note_description"><br>
+                    <label for="due_date">Deadline</label><br>
+                    <input type="date" id="due_date" name="due_date"><br>
                     <input type="submit" value="Notiz hinzufügen">
                 </form>
             </div>
