added sort functions, edit functionality, put,post, get

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <input id="newNote" type="text" placeholder="Suche">
             </div>
             <div>
-                <button type="button" id="sort-button">Sort</button>
+                <button type="button" id="sortByName">Nach Titel</button>
+                <button type="button" id="sortByDate">Nach Datum</button>
+                <button type="button" id="sortByDone">Nach Done</button>
             </div>
         </div>
         <div class="container12">
