--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <button type="button" id="sortByDone">Nach Done</button>
             </div>
             <div>
+                <button id="filterByNotDone">Filter By Not Done</button>
+            </div>
+            <div>
                 <button type="button" id="theme-button">Toggle Style</button>
             </div>
         </div>
