updated mvc logic controller and service and event bubbling for button

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
         <p>&copy; LG</p>
     </footer>
     
-    <script src="./services/services.js"></script>
-    <script src="./services/note_service.js"></script>
-    <script src="./services/toggle_service.js"></script>
+    <script type="module" src="./services/services.js"></script>
+    <script type="module" src="./services/Localstore_service.js"></script>
+    <script type="module" src="./controllers/note_controller.js"></script>
+    <script type="module" src="./controllers/toggle_controller.js"></script>
+    
 </body>
 </html>
