--- a/notes_detail.html
+++ b/notes_detail.html
@@ -55,8 +55,9 @@
         <p>&copy; LG</p>
     </footer>
 
-    <script src="./services/services.js"></script>
-    <script src="./services/notes_detail_service.js"></script>
-    <script src="./services/toggle_service.js"></script>
+    <script type="module" src="./services/services.js"></script>
+    <script type="module" src="./services/Localstore_service.js"></script>
+    <script type="module" src="./controllers/notes_detail_controller.js"></script>
+    <script type="module" src="./controllers/toggle_controller.js"></script>
 </body>
 </html>
